# Burp

./: BenignPacker.sln  CodeGeneratorBot.cpp  CodeGeneratorBot.h  LearnRE.cpp  Makefile  Makefile.learn  Makefile.multilang  MultiLanguageBot.cpp  MultiLanguageBot.h  README.md  RealReverseBot.h  ReverseBot.cpp  ReverseBot.h  SimpleBot.cpp  SimpleBot.h  UNIFIED_BENIGN_PACKER.cpp  bot.cpp  bot_config.txt  build_fixed.bat  build_linux.sh  codebot.cpp  create_directories.bat  learn  main.cpp  multilang_main.cpp  re.cpp  reverse_main.cpp  selfbot_memory.json  simple_main.cpp  test_syntax
BenignPacker/: BenignPacker.cpp
PluginFramework/: IPlugin.h  PluginFramework.cpp  PluginFramework.vcxproj
Plugins/MASMAssemblerPlugin/: MASMAssemblerPlugin.cpp  MASMAssemblerPlugin.h  MASMAssemblerPlugin.vcxproj
Plugins/UniqueStub71Plugin/: UniqueStub71Plugin.cpp  UniqueStub71Plugin.h  UniqueStub71Plugin.vcxproj  UniqueStub71Plugin_fixed.cpp  UniqueStub71Plugin_fixed.h  uniquestub.h
TaskBot/: CMakeLists.txt  CMakeLists_Windows.txt  Makefile.simple  README.md  build.sh  build_windows.bat  taskbot_standalone.cpp
TaskBot/include/: autopilot.h  autopilot_windows.h  ide_integration.h  task_bot.h
TaskBot/src/: autopilot_manager.cpp  command_executor.cpp  config_manager.cpp  file_operations.cpp  input_simulator.cpp  input_simulator_windows.cpp  logger.cpp  main.cpp  main_simple.cpp  scheduler.cpp  system_monitor.cpp  task_manager.cpp  utils.cpp  web_search.cpp  window_manager_windows.cpp
rac/MyProject/: .gitignore  README.md
rac/MyProject/include/: Greeter.hpp
rac/MyProject/src/: Greeter.cpp  main.cpp
selfbot/: README.md  __init__.py  actions.py  cli.py  executor.py  memory.py  planner.py  selfbot.py  utils.py
selfbot/output/: hello.txt
selfbot/tasks/: example.json  rentacoder.json
